--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,23 +1,13 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Django Girls Blog</a></h1>
-        </div>
-{% for post in posts %}
-    <div>
+{% extends 'blog/base.html' %}
 
-            <p>publicat: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
-{% endfor %}
- <!---       <div>
-            <p>publicat: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Vine baiatul!.</p>
-        ---></div>
-    </body>
-</html>
+    {% endfor %}
+{% endblock content %}
